# biotracker_sampletracker

./: .gitignore  CMakeLists.txt  README.md  SampleObject.cpp  SampleObject.h  SampleTracker.cpp  SampleTracker.h
Source/: CMakeLists.txt
Source/Sample/: BioTrackerPlugin.cpp  BioTrackerPlugin.json  CMakeLists.txt
Source/Sample/Controller/: ControllerTrackingAlgorithm.cpp
Source/Sample/Model/: BioTrackerTrackingAlgorithm.cpp  BioTrackerTrackingAlgorithm.h  TrackerParameter.cpp  TrackerParameter.h
Source/Sample/View/: TrackedElementView.cpp  TrackedElementView.h  TrackerParameterView.cpp  TrackerParameterView.h  TrackerParameterView.ui
cmake/: Locate.cmake
cmake/WIX/: WIX.template.in
src/: BioTrackerPlugin.cpp  BioTrackerPlugin.h  CMakeLists.txt  plugin.json.in
src/Controller/: ControllerTrackedComponent.cpp  ControllerTrackingAlgorithm.cpp  ControllerTrackingAlgorithm.h
src/Model/: BioTrackerTrackingAlgorithm.cpp  BioTrackerTrackingAlgorithm.h  TrackerParameter.cpp  TrackerParameter.h
src/View/: TrackedElementView.cpp  TrackedElementView.h  TrackerParameterView.cpp  TrackerParameterView.h  TrackerParameterView.ui
